Add DiffDock cwl and yml files as well as docker images and python scripts

--- a/examples/scripts/Dockerfile_pdbbind_refined
+++ b/examples/scripts/Dockerfile_pdbbind_refined
@@ -1,4 +1,4 @@
-FROM condaforge/mambaforge-pypy3
+FROM condaforge/mambaforge
 
 RUN apt-get update && apt-get install -y wget
 # Download the bdbbind dataset
