--- a/mypy.ini
+++ b/mypy.ini
@@ -76,3 +76,6 @@ ignore_missing_imports = True
 
 [mypy-parmed.*]
 ignore_missing_imports = True
+
+[mypy-openbabel.*]
+ignore_missing_imports = True
