Tweaking yml for inlining.

--- a/examples/gromacs/min.yml
+++ b/examples/gromacs/min.yml
@@ -16,7 +16,7 @@ wic:
   steps:
     (1, steep.yml):
       wic:
-        inlineable: False
+        inlineable: True
     (2, cg.yml):
       wic:
-        inlineable: False
+        inlineable: True
