--- a/examples/gromacs/nmr.yml
+++ b/examples/gromacs/nmr.yml
@@ -1,5 +1,19 @@
+inputs:
+  crd_path:
+    type: File
+    format:
+    - edam:format_1476
+    - edam:format_2033
+  top_zip_path:
+    type: File
+    format:
+    - edam:format_3987
+
 steps:
   - tutorial.yml:
+      in:
+        crd_path: ~crd_path
+        top_zip_path: ~top_zip_path
   - python_script:
       in:
         script: ../scripts/nmr4md.py
